--- a/css/hectre.webflow.css
+++ b/css/hectre.webflow.css
@@ -127,10 +127,17 @@ label {
 }
 
 .dropdown {
+  height: 45px;
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(7.802690582959641, 100.00%, 43.73%, 0.10)), to(hsla(7.802690582959641, 100.00%, 43.73%, 0.10)));
+  background-image: linear-gradient(180deg, hsla(7.802690582959641, 100.00%, 43.73%, 0.10), hsla(7.802690582959641, 100.00%, 43.73%, 0.10));
+  -webkit-transition: background-color 400ms ease;
+  transition: background-color 400ms ease;
+  font-family: Lato, sans-serif;
+  color: #646464;
 }
 
 .side-nav-tab {
@@ -224,6 +231,16 @@ label {
   background-size: 22px;
 }
 
+.tab-icon.insights {
+  background-image: url('../images/Insight.png');
+  background-size: 23px;
+}
+
+.tab-icon.performance {
+  background-image: url('../images/Performance.png');
+  background-size: 25px;
+}
+
 .tab-title {
   display: inline-block;
   padding-top: 0px;
@@ -306,6 +323,13 @@ label {
   background-color: #fff;
 }
 
+.sub-frame.scroll {
+  overflow: auto;
+  max-height: 70vh;
+  min-height: 50vh;
+  padding-bottom: 10vh;
+}
+
 .frame-content {
   display: -webkit-box;
   display: -webkit-flex;
@@ -331,6 +355,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  max-width: 200px;
   min-width: 165px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -345,11 +370,19 @@ label {
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
   background-color: #fff;
 }
 
 .column._6-columns {
   width: 16.66%;
+}
+
+.column.table {
+  border-right: 1px solid #eaeaea;
 }
 
 .row {
@@ -393,11 +426,14 @@ label {
 .row.label {
   position: relative;
   height: 50px;
-  padding: 8% 20% 8% 15%;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  padding: 8% 10%;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
@@ -422,16 +458,30 @@ label {
   justify-content: space-between;
 }
 
+.row.table {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 50px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-bottom: 1px solid #eaeaea;
+  text-align: center;
+}
+
 .column-container {
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   border-radius: 10px;
   color: #2c3d51;
 }
@@ -855,7 +905,7 @@ label {
 }
 
 .main-container {
-  position: static;
+  position: relative;
   display: block;
   overflow: auto;
   padding-top: 1%;
@@ -890,6 +940,22 @@ label {
   justify-content: space-between;
 }
 
+.main-container.table {
+  padding-top: 0%;
+  padding-bottom: 0%;
+}
+
+.main-container.graph {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
 .icon {
   margin-right: 8px;
 }
@@ -918,9 +984,9 @@ label {
   color: #202020;
 }
 
-.heading.total-row {
+.heading.total {
   color: #202020;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .heading.small {
@@ -939,6 +1005,47 @@ label {
   font-size: 13px;
   line-height: 24px;
   text-transform: uppercase;
+}
+
+.column-label.total {
+  color: #212121;
+  font-weight: 700;
+}
+
+.column-label.bold {
+  font-weight: 700;
+}
+
+.column-label.qc-number {
+  color: #7ed321;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.column-label.variety {
+  line-height: 20px;
+  text-align: center;
+  text-transform: none;
+}
+
+.column-label.picker {
+  color: #646464;
+  text-transform: none;
+}
+
+.column-label.centered {
+  text-align: center;
+  text-transform: none;
+}
+
+.column-label.label {
+  padding-top: 0px;
+  color: #646464;
+  font-size: 11px;
+  line-height: 11px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .horizontal-nav-title {
@@ -2248,6 +2355,246 @@ label {
   display: none;
 }
 
+.vertical-y-column {
+  min-width: 125px;
+  border-right: 1px solid #eaeaea;
+}
+
+.divider {
+  width: 2px;
+  height: 35px;
+  margin-right: 5px;
+  margin-left: 5px;
+  background-color: rgba(74, 144, 226, .1);
+}
+
+.highlights-container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.output-box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 120px;
+  min-width: 140px;
+  margin: 10px 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid #eaeaea;
+  border-radius: 13px;
+}
+
+.graph-container {
+  position: relative;
+  width: 86%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.type {
+  font-family: Lato, sans-serif;
+  color: #8e8e93;
+  font-size: 15px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.number {
+  margin-top: 15px;
+  font-family: Lato, sans-serif;
+  color: #4a90e2;
+  font-size: 40px;
+  line-height: 1em;
+  font-weight: 700;
+}
+
+.info {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: 5px;
+  bottom: 5px;
+  z-index: 1000;
+  width: 14px;
+  cursor: pointer;
+}
+
+.table-hover-overlay {
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 49px;
+  padding: 8% 10%;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid #7ed321;
+  background-color: #fff;
+}
+
+.row-container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.feedback-row-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 5px 20px 5px 10px;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  border: 1px solid #eaeaea;
+  border-radius: 8px;
+}
+
+.feedback-headers {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.feedback-column {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+}
+
+.row-vertical-divider {
+  width: 1px;
+  min-height: 60px;
+  margin: auto 10px;
+  background-color: #eaeaea;
+}
+
+.comments {
+  font-family: Lato, sans-serif;
+  color: #646464;
+}
+
+.feedback-header-label-vertical {
+  min-width: 130px;
+  margin-bottom: 10px;
+}
+
+.zero-state {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 40vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.xero-state-header {
+  margin-top: 16px;
+  font-family: Lato, sans-serif;
+  color: #646464;
+  font-size: 16px;
+}
+
+.lightbox-image-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 120px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.lightbox-image {
+  margin-right: 10px;
+  border-radius: 8px;
+}
+
 html.w-mod-js *[data-ix="hide-toast"] {
   opacity: 0;
   -webkit-transform: translate(0px, 30px);
@@ -2282,15 +2629,11 @@ html.w-mod-js *[data-ix="hide-overlay"] {
   opacity: 0;
 }
 
-#w-node-f19a2ddc86f4-0d7dbbcc {
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-column-span: 1;
-  grid-column-end: 2;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: 2;
+html.w-mod-js *[data-ix="initial-table-hover-overlay"] {
+  opacity: 0;
+  -webkit-transform: translate(-15px, 0px);
+  -ms-transform: translate(-15px, 0px);
+  transform: translate(-15px, 0px);
 }
 
 #w-node-f53c3baeb2ae-0d7dbbcc {
